* Fix README for the tool geopy into codebas

--- a/README
+++ b/README
@@ -26,6 +26,7 @@ Second important dependency is GeoPy found in this link
 http://code.google.com/p/geopy/
 
 Download the last tarball and install with simple steps
+or can get it into tool path
 
 untar tarball
 
